--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -13,7 +13,7 @@
     <FrameLayout
         android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/value60"
         android:background="@color/colorPrimary">
 
         <EditText
@@ -21,10 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
+            android:layout_marginStart="@dimen/value10"
+            android:layout_marginEnd="@dimen/value10"
+            android:paddingStart="@dimen/value10"
+            android:paddingEnd="@dimen/value10"
             android:hint="输入地址"
             android:background="@drawable/search_bg"/>
     </FrameLayout>
